--- a/.github/workflows/main_hun8902.yml
+++ b/.github/workflows/main_hun8902.yml
@@ -1,6 +1,3 @@
-# Docs for the Azure Web Apps Deploy action: https://github.com/Azure/webapps-deploy
-# More GitHub Actions for Azure: https://github.com/Azure/actions
-
 name: Build and deploy Node.js app to Azure Web App - hun8902
 
 on:
@@ -57,9 +54,7 @@ jobs:
       - name: Login to Azure
         uses: azure/login@v2
         with:
-          client-id: ${{ secrets.AZUREAPPSERVICE_CLIENTID_189AB1D569A54EF1952E843CAF4FAFBC }}
-          tenant-id: ${{ secrets.AZUREAPPSERVICE_TENANTID_474BF669FC6048BE923A2B24860D0918 }}
-          subscription-id: ${{ secrets.AZUREAPPSERVICE_SUBSCRIPTIONID_D5D8E2C6552B4242B0AD98C1A06C307A }}
+          credentials: ${{ secrets.AZURE_CREDENTIALS }}
 
       - name: 'Deploy to Azure Web App'
         id: deploy-to-webapp
@@ -68,4 +63,3 @@ jobs:
           app-name: 'hun8902'
           slot-name: 'Production'
           package: .
-          
