--- a/.github/workflows/main_hun8902.yml
+++ b/.github/workflows/main_hun8902.yml
@@ -54,11 +54,8 @@ jobs:
       - name: Login to Azure
         uses: azure/login@v2
         with:
-          auth-type: 'service-principal'  # 명시적으로 service-principal을 사용
-          client-id: ${{ secrets.AZURE_CLIENT_ID }}
-          tenant-id: ${{ secrets.AZURE_TENANT_ID }}
-          subscription-id: ${{ secrets.AZURE_SUBSCRIPTION_ID }}
-          client-secret: ${{ secrets.AZURE_CLIENT_SECRET }}
+          auth-type: 'SERVICE_PRINCIPAL'  # Correct case for SERVICE_PRINCIPAL
+          creds: ${{ secrets.AZURE_CREDENTIALS }}  # Using the full credentials JSON
 
       - name: 'Deploy to Azure Web App'
         id: deploy-to-webapp
